infra/k8s/workloads/frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: angular-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: angular-frontend

  template:
    metadata:
      labels:
        app: angular-frontend

    spec:
      containers:
        - name: frontend
          image: ghcr.io/0xc0dec0ffeelab/angular-frontend:latest

          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi

---
apiVersion: v1
kind: Service

metadata:
  name: angular-frontend

spec:
  type: ClusterIP

  selector:
    app: angular-frontend

  ports:
    - name: http
      port: 3000
      targetPort: http
