infra/k8s/workloads/httproute.yaml
# Traefik Gateway API 負責前後端流量分配
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: angular-route

spec:
  parentRefs:
    - name: angular-gateway
      namespace: traefik

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

      backendRefs:
        - name: angular-backend
          port: 3000

    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: angular-frontend
          port: 3000
